More flexible query system. Work in progress, probably close to finish

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -106,3 +106,30 @@ another_process_with_the_id = Más folyamatot futtatni ugyanezzel az azonosító
 query_another_id = Új azonosítót szeretnél lekérdezni
 return_to_main_menu = Visszalépni a főmenűbe
 to_quit = Kilépni
+telephoneNumber = Telefonszám
+enabled = Engedélyezve
+disabled = Letiltva
+Company = Cég
+Department = Osztály
+logonWorkstation = Munkaállomás
+mail = E-mailcím
+title = Beosztás
+active_ones = X napon belül aktívak
+inactive_ones = X napon belül inaktívak
+attribute = Attribútum
+filter = Filter
+funcexptitle = Az ebben a menüben elérhető funkciók
+custom_attrib_title = (Attribútum) Egyéni attribútum készítése
+custom_filter_title = (Filter) Egyéni filter készítése
+funchelp = (H) Segítség
+funcfinish = (K) Beállítások véglegesítése, kilépés
+
+create_custom_attrib = Egyéni attribútum készítése.
+create_custom_attrib_expl = Kérlek add meg a szükséges adatokat! Segítséget a (H) betű begépelésével kaphatsz. Az előző menübe bármikor visszatérhetsz a (Ki) szó begépelésével.
+create_custom_filter = Egyéni filter készítése.
+create_custom_filter_expl = Egyéni filter készítése. Kérlek add meg a szükséges adatokat! Segítséget a (H) betű begépelésével kaphatsz. Az előző menübe bármikor visszatérhetsz a (Ki) szó begépelésével.
+custom_attr_dispname = Egyéni attribútum megjelenési neve.
+custom_attr_msname = Egyéni attribútum AD-beli neve
+custom_finish = Ki
+custom_attr_dispname_help = Itt segítőszöveg lesz valamikor
+custom_attr_msname_help = Itt segítőszöveg lesz valamikor
