Selecting methods are finished, last step before finalizing the new function

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -123,13 +123,19 @@ custom_attrib_title = (Attribútum) Egyéni attribútum készítése
 custom_filter_title = (Filter) Egyéni filter készítése
 funchelp = (H) Segítség
 funcfinish = (K) Beállítások véglegesítése, kilépés
-
+attribselectmain_help = Itt valamikor segítőszöveg lesz.
 create_custom_attrib = Egyéni attribútum készítése.
 create_custom_attrib_expl = Kérlek add meg a szükséges adatokat! Segítséget a (H) betű begépelésével kaphatsz. Az előző menübe bármikor visszatérhetsz a (Ki) szó begépelésével.
 create_custom_filter = Egyéni filter készítése.
-create_custom_filter_expl = Egyéni filter készítése. Kérlek add meg a szükséges adatokat! Segítséget a (H) betű begépelésével kaphatsz. Az előző menübe bármikor visszatérhetsz a (Ki) szó begépelésével.
-custom_attr_dispname = Egyéni attribútum megjelenési neve.
+create_custom_filter_expl = Kérlek add meg a szükséges adatokat! Segítséget a (H) betű begépelésével kaphatsz. Az előző menübe bármikor visszatérhetsz a (Ki) szó begépelésével. Először a filter igaz oldalának nevét add meg, aztán a szintaxisát, aztán a hamis oldalának nevét, és annak szintaxisát.
+custom_attr_dispname = Egyéni attribútum megjelenési neve
 custom_attr_msname = Egyéni attribútum AD-beli neve
 custom_finish = Ki
 custom_attr_dispname_help = Itt segítőszöveg lesz valamikor
 custom_attr_msname_help = Itt segítőszöveg lesz valamikor
+custom_attrib_successful = Az egyéni attribútum létrejött
+custom_attrib_unsuccesful = Az egyéni attribútum nem jött létre!
+custom_filter_dispname = Filter neve
+custom_filter_dispname_help = Itt segítőszöveg lesz valamikor
+custom_filter_msname = Filter szintaxisa
+custom_filter_msname_help = Itt segítőszöveg lesz valamikor
