Almost finished modul query customization modul. Will replace a considerable part of the main program.

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -76,7 +76,7 @@ active_or_inactive = "Az aktív, vagy inaktív gépeket szeretnéd lekérdezni?`
 last = "elmult"
 days_active_pc = "NapbanAktivGepek"
 days_inactive_pc = "NapbanInaktivGepek"
-computername = "Gépnév"
+computername = Gépnév
 last_logon = Utolsó bejelentkezés
 OS = Operációs rendszer
 users_of_ou = "Egy OU felhasználóinak lekérdezése`n"
@@ -114,6 +114,9 @@ Department = Osztály
 logonWorkstation = Munkaállomás
 mail = E-mailcím
 title = Beosztás
+IPv4Address = IP cím
+logoncount = Bejelentkezések száma
+created = Létrehozás ideje
 active_ones = X napon belül aktívak
 inactive_ones = X napon belül inaktívak
 attribute = Attribútum
@@ -139,3 +142,8 @@ custom_filter_dispname = Filter neve
 custom_filter_dispname_help = Itt segítőszöveg lesz valamikor
 custom_filter_msname = Filter szintaxisa
 custom_filter_msname_help = Itt segítőszöveg lesz valamikor
+youset_day_filter = Beállítottál napokra vonatkozó szűrést. Hány napra szeretnél szűrni?
+youset_daynumber = Napok száma
+non_numeric_value = A megadott érték nem szám! Kérlek számot adj meg!
+unset_ou = Biztos vagy benne, hogy törölni akarod a beállított OU-t? Üss I-t, ha igen.
+yes_char = I
