Huge rewrital of functions. Not all finished, mass modifying attributes added, but is before optimazation. Language system is partially broken for now. It works completely in Hungarian, but because of the changes, the English translation is broken.

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -23,9 +23,9 @@ whats_next_outconsole = Kiiratnád
 whats_next_savecsv = Fájlba mentenéd
 whats_next_group_copy_users = Másik csoporthoz másolnád a tagjait
 whats_next_users_copy_memberships = Más felhasználóhoz másolnád a tagságokat
-name = "Név"
-description = "Leírás"
-username = "Felhasználónév"
+name = Név
+description = Leírás
+username = Felhasználónév
 groups = Csoportok
 group_members_copy_the = A(z)
 group_members_copy = csoport tagjainak másolása
@@ -59,12 +59,12 @@ copy_users_whats_next = "(R) Ha hozzá akarnál adni valaki mást is ugyanezekhe
 all_groups_of_ou = "Egy OU ÖSSZES csoportjának lekérdezése`n"
 no_groups_in_ou = A megadott OU-ban nincsenek csoportok
 progress = A folyamat állapota:
-another_ou = Másik OU-t kérdezni le
+new_process = Új lekérdezést futtatni
 all_users_of_ou = Egy OU ÖSSZES felhasználójának lekérdezése
 no_users_in_ou = A megadott OU-ban nincsenek felhasználók
 all_computers_of_ou = Egy OU számítógépeinek lekérdezése
 no_computers_in_ou = A megadott OU-ban nincsenek számítógépek
-computers = "Számítógépek"
+computers = Számítógépek
 ou_exist = A keresett OU létezik
 generic_or_activity_filtered = "Csak egy általános listát kérnél le, vagy aktivitás/inaktivitás ideje szerint is szűrnéd?`n`n(1) Általános lista`n(2) Aktivitás/inaktivitás szerint szűrt lista"
 the = "A(z)"
@@ -147,3 +147,20 @@ youset_daynumber = Napok száma
 non_numeric_value = A megadott érték nem szám! Kérlek számot adj meg!
 unset_ou = Biztos vagy benne, hogy törölni akarod a beállított OU-t? Üss I-t, ha igen.
 yes_char = I
+available_attribs = Választható attribútumok
+available_filters = Választható filterek
+attributes_and_filters = A kimenetben megjelenítendő attribútumok kiválasztása, eredmények szűrése
+user_is_being_queried = Felhasználó lekérdezése
+enter_modifycsv_path = Add meg a módosításhoz használt CSV elérési útját!
+file_doesnt_exist = A megadott fájl nem létezik!
+dangerzone = !!! VESZÉLYZÓNA !!! Kizárólag, ha biztosan tudod, mit csinálsz
+mm_prewarn_line1 = A program, amit most készülsz futtatni, egy CSV fájlban szereplő információk alapján végez módosításokat a felhasználókon!
+mm_prewarn_line2 = A program a változtatások előtt !!! SEMMILYEN !!! megerősítést nem kér!
+mm_prewarn_line3 = Az OU, és csv fájl elérésének megadását követően a folyamat automatikusan megy végbe!
+mm_prewarn_line4 = Kizárólag akkor futtasd, ha ezer százalékig biztos vagy benne, hogy az elvégzendő beállítások így helyesek!
+last_warning = !!! Utolsó figyelmeztetés !!!
+will_be_used_to_modify = fájl tartalmával módosítani fogod az
+modify_all_users_of_ou = MINDEN felhasználójának adatait!
+enter_yes = A módosítás megkezdéséhez gépeld be, hogy "Igen", majd üss Entert!
+yes = Igen
+enter_string = Gépeld be
