Close to final mass modify function. Gotta sleep now :D

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -164,3 +164,9 @@ modify_all_users_of_ou = MINDEN felhasználójának adatait!
 enter_yes = A módosítás megkezdéséhez gépeld be, hogy "Igen", majd üss Entert!
 yes = Igen
 enter_string = Gépeld be
+the_given_csv = A megadott CSV fájl nem tartalmaz
+the_attribute = attribútumot
+for_the_user = felhasználóhoz!
+user_doesnt_exist = felhasználó nem létezik, vagy nem a(z)
+not_in_the_ou = OU-ban található
+error_description = A hiba leírása
