Mass modify function is release ready. More intuitive output creation is almost finished. Probably next to last commit before merging into Master

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -67,7 +67,7 @@ no_computers_in_ou = A megadott OU-ban nincsenek számítógépek
 computers = Számítógépek
 ou_exist = A keresett OU létezik
 generic_or_activity_filtered = "Csak egy általános listát kérnél le, vagy aktivitás/inaktivitás ideje szerint is szűrnéd?`n`n(1) Általános lista`n(2) Aktivitás/inaktivitás szerint szűrt lista"
-the = "A(z)"
+the = A(z)
 computers_of_ou = "OU számítógépek lekérdezése`n"
 how_many_days = "Az elmúlt hány nap során aktív/inaktív objektumokat szeretnéd lekérdezni?`nNapok száma"
 computers_last = "számítógépek elmúlt"
@@ -154,7 +154,7 @@ user_is_being_queried = Felhasználó lekérdezése
 enter_modifycsv_path = Add meg a módosításhoz használt CSV elérési útját!
 file_doesnt_exist = A megadott fájl nem létezik!
 dangerzone = !!! VESZÉLYZÓNA !!! Kizárólag, ha biztosan tudod, mit csinálsz
-mm_prewarn_line1 = A program, amit most készülsz futtatni, egy CSV fájlban szereplő információk alapján végez módosításokat a felhasználókon!
+mm_prewarn_line1 = A funkció, amit most készülsz futtatni, egy CSV fájlban szereplő információk alapján végez módosításokat a felhasználókon!
 mm_prewarn_line2 = A program a változtatások előtt !!! SEMMILYEN !!! megerősítést nem kér!
 mm_prewarn_line3 = Az OU, és csv fájl elérésének megadását követően a folyamat automatikusan megy végbe!
 mm_prewarn_line4 = Kizárólag akkor futtasd, ha ezer százalékig biztos vagy benne, hogy az elvégzendő beállítások így helyesek!
@@ -169,4 +169,5 @@ the_attribute = attribútumot
 for_the_user = felhasználóhoz!
 user_doesnt_exist = felhasználó nem létezik, vagy nem a(z)
 not_in_the_ou = OU-ban található
-error_description = A hiba leírása
+error_description = A hiba leírása \fsfs
+delimiter = ;
