Almost finished, only minor bugfixes left, and the correction of the language files before merging Development to Master branch.

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -60,7 +60,7 @@ all_groups_of_ou = "Egy OU ÖSSZES csoportjának lekérdezése`n"
 no_groups_in_ou = A megadott OU-ban nincsenek csoportok
 progress = A folyamat állapota:
 new_process = Új lekérdezést futtatni
-all_users_of_ou = Egy OU ÖSSZES felhasználójának lekérdezése
+all_users_of_ou = Egy OU felhasználóinak lekérdezése
 no_users_in_ou = A megadott OU-ban nincsenek felhasználók
 all_computers_of_ou = Egy OU számítógépeinek lekérdezése
 no_computers_in_ou = A megadott OU-ban nincsenek számítógépek
@@ -163,6 +163,7 @@ will_be_used_to_modify = fájl tartalmával módosítani fogod az
 modify_all_users_of_ou = MINDEN felhasználójának adatait!
 enter_yes = A módosítás megkezdéséhez gépeld be, hogy "Igen", majd üss Entert!
 yes = Igen
+no = Nem
 enter_string = Gépeld be
 the_given_csv = A megadott CSV fájl nem tartalmaz
 the_attribute = attribútumot
@@ -171,3 +172,22 @@ user_doesnt_exist = felhasználó nem létezik, vagy nem a(z)
 not_in_the_ou = OU-ban található
 error_description = A hiba leírása \fsfs
 delimiter = ;
+what_kind_of_query = Milyen lekérdezést szeretnél?
+simple_with_groupmemberships = (1) Egyszerű, csak a csoporttagságokat tartalmazó
+detailed_with_attribute_selection = (2) Bővített, választható attribútumokkal
+what_do_you_want_with_results = Mit szeretnél tenni az eredményekkel?
+s_computers = számítógépei
+s_users = felhasználói
+char_new_proc = N
+char_repeat = R
+char_mainmenu = M
+char_quit = Q
+char_yes = I
+char_no = N
+chosen_ou = Kiválasztott OU
+ou_is_not_set = OU szűrés nincs kiválasztva
+confirm_without_ou = Biztos vagy benne, hogy nem választasz ki OU-t a szűréshez?
+search_will_be_on_whole_ad = A lekérdezés így a teljes AD-n fog lezajlani, ami jelentős idővel járhat!
+backup = Mentes
+failed = Sikertelen
+are_you_sure = Biztos vagy benne, hogy folytatni szeretnéd?
