One last bug to kill before merging

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -101,7 +101,7 @@ users_of_all_groups_ou = Egy OU összes csoportjának tagjainak lekérdezése
 memberships_of_all_users_ou = Egy OU összes felhasználójának csoporttagságainak lekérdezése
 change_save_root = A program gyökérkönyvtárának megváltoztatása
 after_process = Mit szeretnél most tenni?
-repeat_with_source = Ugyanezeket más célobjektumhoz másolni
+repeat = Más folyamat ugyanezzel az objektummal
 another_process_with_the_id = Más folyamatot futtatni ugyanezzel az azonosítóval
 query_another_id = Új azonosítót szeretnél lekérdezni
 return_to_main_menu = Visszalépni a főmenűbe
@@ -170,7 +170,7 @@ the_attribute = attribútumot
 for_the_user = felhasználóhoz!
 user_doesnt_exist = felhasználó nem létezik, vagy nem a(z)
 not_in_the_ou = OU-ban található
-error_description = A hiba leírása \fsfs
+error_description = A hiba leírása
 delimiter = ;
 what_kind_of_query = Milyen lekérdezést szeretnél?
 simple_with_groupmemberships = (1) Egyszerű, csak a csoporttagságokat tartalmazó
@@ -184,6 +184,7 @@ char_mainmenu = M
 char_quit = Q
 char_yes = I
 char_no = N
+char_finalize = K
 chosen_ou = Kiválasztott OU
 ou_is_not_set = OU szűrés nincs kiválasztva
 confirm_without_ou = Biztos vagy benne, hogy nem választasz ki OU-t a szűréshez?
