English translation is finished, last mistakes in the Hungarian translation is corrected, minor code optimization in the main file.

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -4,9 +4,9 @@ choose = Válassz
 choose_err = Kérlek, csak a megadott lehetőségek közül válassz!
 file_not_created = Valami hiba történt, a fájl nem jött létre!
 old_path = A fájlok mentésének jelenlegi elérési útja:
-new_path = "Kérlek add meg az új elérési utat!`nÚj elérési út"
+new_path = Kérlek add meg az új elérési utat!
 object_not_consist = Az objektum nem tartalmaz tagokat!
-file_is_created = "A fájl létrejött. Helye:"
+file_is_created = A fájl létrejött. Helye:
 id_not_exist = A megadott azonosító nem létezik
 reenter_id = Kérlek add meg újra a lekérdezendő azonosítót!
 non_existent_ou = Nem létező OU-t adtál meg!
@@ -37,12 +37,8 @@ task_unsuccesful = A feladat végrehajtása sikertelen!
 you_have_no_rights = Nincs jogosultságod a(z)
 to_modify_group = csoport módosítására!
 task_fully_succesful = A feladat hibák nélkül futott le.
-copy_groups_whats_next = "(R) Ha hozzá akarnál adni valaki mást is ugyanezekhez a csoportokhoz`n(M) Ha más folyamatot szeretnél futtatni ugyanezzel a forrás csoporttal`n(U) Ha új csoportot szeretnél lekérdezni`n(N) Ha visszalépnél a program elejére`n(Q) Ha kilépnél"
 enter_username = Kérlek add meg a lekérdezni kívánt felhasználó bejelentkezési nevét!
 the_user = felhasználót, neve:
-user_whats_next_admin = "Csak kiiratni szeretnéd az eredményt, fájlba menteni, vagy átmásolnád a csoporttagságait egy másik felhasználóhoz?`n(1) Ha kiíratnád`n(2) Ha fájlba mentetnéd`n(3) Ha más felhasználóhoz másolnád"
-user_whats_next_user = "Csak kiiratni szeretnéd az eredményt vagy fájlba menteni?`n(1) Ha kiíratnád`n(2) Ha fájlba mentetnéd"
-user_whats_next = "(M) Ha más folyamatot szeretnél futtatni ugyanezzel a forrás felhasználóval`n(U) Ha új felhasználót szeretnél lekérdezni`n(N) Ha visszalépnél a program elejére`n(Q) Ha kilépnél"
 users = Felhasználók
 group_name = Csoportnév
 s_rights = jogai
@@ -51,12 +47,10 @@ users_groups_copying = felhasználó csoporttagságainak másolása
 to_user = felhasználóhoz
 enter_target_user = Kérlek add meg a felhasználó nevét, akihez másolni szeretnéd a csoporttagságokat
 have_no_rights_to_modify_groups = Nincs jogosultságod a felhasználó hozzáadására a csoportokhoz!
-task_ended_with_errors = A feladat lefutott a következő hibákkal:
+task_finished_with_errors = A feladat lefutott a következő hibákkal:
 user_added = felhasználó sikeresen hozzáadva
 to_group_of = csoporthoz a
 of_groups = csoportból.
-copy_users_whats_next = "(R) Ha hozzá akarnál adni valaki mást is ugyanezekhez a csoportokhoz`n(M) Ha más folyamatot szeretnél futtatni ugyanezzel a forrás felhasználóval`n(U) Ha új felhasználót szeretnél lekérdezni`n(N) Ha visszalépnél a program elejére`n(Q) Ha kilépnél"
-all_groups_of_ou = "Egy OU ÖSSZES csoportjának lekérdezése`n"
 no_groups_in_ou = A megadott OU-ban nincsenek csoportok
 progress = A folyamat állapota:
 new_process = Új lekérdezést futtatni
@@ -65,29 +59,15 @@ no_users_in_ou = A megadott OU-ban nincsenek felhasználók
 all_computers_of_ou = Egy OU számítógépeinek lekérdezése
 no_computers_in_ou = A megadott OU-ban nincsenek számítógépek
 computers = Számítógépek
-ou_exist = A keresett OU létezik
-generic_or_activity_filtered = "Csak egy általános listát kérnél le, vagy aktivitás/inaktivitás ideje szerint is szűrnéd?`n`n(1) Általános lista`n(2) Aktivitás/inaktivitás szerint szűrt lista"
 the = A(z)
-computers_of_ou = "OU számítógépek lekérdezése`n"
-how_many_days = "Az elmúlt hány nap során aktív/inaktív objektumokat szeretnéd lekérdezni?`nNapok száma"
-computers_last = "számítógépek elmúlt"
-days_of_activity = "napjának aktivitása`n"
-active_or_inactive = "Az aktív, vagy inaktív gépeket szeretnéd lekérdezni?`n(1) Ha az aktív gépeket`n(2) Ha az inaktív gépeket"
-last = "elmult"
-days_active_pc = "NapbanAktivGepek"
-days_inactive_pc = "NapbanInaktivGepek"
 computername = Gépnév
 last_logon = Utolsó bejelentkezés
 OS = Operációs rendszer
-users_of_ou = "Egy OU felhasználóinak lekérdezése`n"
-ou_users = "OU felhasználók lekérdezése`n"
-users_last = "felhasználók elmúlt"
-days_active_users = "NapbanAktivFelhasznalok"
-days_inactive_users = "NapbanInaktivFelhasznalok"
-users_of = "Felhasználói"
 directory_cant_be_created = Figyelem! A mappa létrehozása nem sikerült!
-folder_not_exist = "A megadott mappa nem létezik. Szeretnéd, hogy létrehozzam?`n(1) Igen`n(2) Nem"
-new_or_exit = "Megadsz egy új elérési utat, vagy inkább kilépnél, és használnád az eredeti útvonalat?`n(1) Új elérési út`n(2) Maradjunk az eredetinél"
+folder_not_exist = A megadott mappa nem létezik. Szeretnéd, hogy létrehozzam?
+new_or_exit = Megadsz egy új elérési utat, vagy inkább kilépnél, és használnád az eredeti útvonalat?
+enter_new_path = Új elérési út
+stick_to_original = Maradjunk az eredetinél
 program_exits = ! A program leáll !
 dlls_missing = !! A Microsoft.ActiveDirectory.Management.resources.dll, vagy Microsoft.ActiveDirectory.Management.dll hiányzik !!
 warning = !!! FIGYELEM !!!
@@ -96,13 +76,12 @@ run_anyway = Ha ennek ellenére is futtatnád a programot, üss Entert
 id = Azonosító
 path = Elérési út
 users_of_group = Egy csoporthoz tartozó felhasználók lekérdezése
-memberships_of_user = Egy felhasználó csoporttagságainak lekérdezése
+memberships_of_user = Egy felhasználó csoporttagságainak/attribútumainak lekérdezése
 users_of_all_groups_ou = Egy OU összes csoportjának tagjainak lekérdezése
 memberships_of_all_users_ou = Egy OU összes felhasználójának csoporttagságainak lekérdezése
 change_save_root = A program gyökérkönyvtárának megváltoztatása
 after_process = Mit szeretnél most tenni?
 repeat = Más folyamat ugyanezzel az objektummal
-another_process_with_the_id = Más folyamatot futtatni ugyanezzel az azonosítóval
 query_another_id = Új azonosítót szeretnél lekérdezni
 return_to_main_menu = Visszalépni a főmenűbe
 to_quit = Kilépni
@@ -125,7 +104,7 @@ funcexptitle = Az ebben a menüben elérhető funkciók
 custom_attrib_title = (Attribútum) Egyéni attribútum készítése
 custom_filter_title = (Filter) Egyéni filter készítése
 funchelp = (H) Segítség
-funcfinish = (K) Beállítások véglegesítése, kilépés
+funcfinish = Beállítások véglegesítése, kilépés
 attribselectmain_help = Itt valamikor segítőszöveg lesz.
 create_custom_attrib = Egyéni attribútum készítése.
 create_custom_attrib_expl = Kérlek add meg a szükséges adatokat! Segítséget a (H) betű begépelésével kaphatsz. Az előző menübe bármikor visszatérhetsz a (Ki) szó begépelésével.
@@ -146,7 +125,6 @@ youset_day_filter = Beállítottál napokra vonatkozó szűrést. Hány napra sz
 youset_daynumber = Napok száma
 non_numeric_value = A megadott érték nem szám! Kérlek számot adj meg!
 unset_ou = Biztos vagy benne, hogy törölni akarod a beállított OU-t? Üss I-t, ha igen.
-yes_char = I
 available_attribs = Választható attribútumok
 available_filters = Választható filterek
 attributes_and_filters = A kimenetben megjelenítendő attribútumok kiválasztása, eredmények szűrése
@@ -173,8 +151,8 @@ not_in_the_ou = OU-ban található
 error_description = A hiba leírása
 delimiter = ;
 what_kind_of_query = Milyen lekérdezést szeretnél?
-simple_with_groupmemberships = (1) Egyszerű, csak a csoporttagságokat tartalmazó
-detailed_with_attribute_selection = (2) Bővített, választható attribútumokkal
+simple_with_groupmemberships = Egyszerű, csak a csoporttagságokat tartalmazó
+detailed_with_attribute_selection = Bővített, választható attribútumokkal
 what_do_you_want_with_results = Mit szeretnél tenni az eredményekkel?
 s_computers = számítógépei
 s_users = felhasználói
@@ -192,3 +170,4 @@ search_will_be_on_whole_ad = A lekérdezés így a teljes AD-n fog lezajlani, am
 backup = Mentes
 failed = Sikertelen
 are_you_sure = Biztos vagy benne, hogy folytatni szeretnéd?
+not_connected_to_ad = !! Nincs elérhető Active Directory kiszolgáló !!
