Bugfixes: 1) Progresscounter behavior, 2) Error collection for Mass modify, 3) checkinf if object exist, 4) Mass Modify quit behavior.

--- a/Languages/eng.lang
+++ b/Languages/eng.lang
@@ -143,9 +143,6 @@ enter_yes = To initiate the process, enter "Yes" then hit Enter!
 yes = Yes
 no = No
 enter_string = Enter
-the_given_csv = This CSV file doesn't have
-the_attribute = attribute for
-for_the_user = user!
 user_doesnt_exist = user doesn't exist or is not in the
 not_in_the_ou = organizational unit!
 error_description = Description of the error
@@ -171,3 +168,7 @@ backup = Backup
 failed = Failed
 are_you_sure = Are you sure you want to continue?
 not_connected_to_ad = !! There is no available Active Directory server !!
+mass_modify_user_attributes = Mass modify user attributes
+path_of_backup = Path for the backup of the modified attributes:
+path_of_failed_tasks = Path for the info csv about the failed modification tries:
+unsuccesful = Unsuccesful!
