--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -137,15 +137,12 @@ mm_prewarn_line2 = A program a változtatások előtt !!! SEMMILYEN !!! megerős
 mm_prewarn_line3 = Az OU, és csv fájl elérésének megadását követően a folyamat automatikusan megy végbe!
 mm_prewarn_line4 = Kizárólag akkor futtasd, ha ezer százalékig biztos vagy benne, hogy az elvégzendő beállítások így helyesek!
 last_warning = !!! Utolsó figyelmeztetés !!!
-will_be_used_to_modify = fájl tartalmával módosítani fogod az
-modify_all_users_of_ou = MINDEN felhasználójának adatait!
+will_be_used_to_modify = fájl tartalmával módosítani fogod a(z)
+modify_all_users_of_ou = OU MINDEN felhasználójának adatait!
 enter_yes = A módosítás megkezdéséhez gépeld be, hogy "Igen", majd üss Entert!
 yes = Igen
 no = Nem
 enter_string = Gépeld be
-the_given_csv = A megadott CSV fájl nem tartalmaz
-the_attribute = attribútumot
-for_the_user = felhasználóhoz!
 user_doesnt_exist = felhasználó nem létezik, vagy nem a(z)
 not_in_the_ou = OU-ban található
 error_description = A hiba leírása
@@ -171,3 +168,7 @@ backup = Mentes
 failed = Sikertelen
 are_you_sure = Biztos vagy benne, hogy folytatni szeretnéd?
 not_connected_to_ad = !! Nincs elérhető Active Directory kiszolgáló !!
+mass_modify_user_attributes = Felhasználók tulajdonságainak tömeges módosítása
+path_of_backup = A módosítások előtti állapot mentésének helye:
+path_of_failed_tasks = A sikertelen módosításokról készített logfájl helye: 
+unsuccesful = Sikertelen!
