Extended user and group search menu

--- a/Languages/hun.lang
+++ b/Languages/hun.lang
@@ -16,7 +16,7 @@ title_user = AD Felhasználók és Csoportok - Felhasználói mód
 warn_not_admin = Nem admin jogokkal futtatod a programot!
 main_menu = Főmenü
 enter_group_name = Kérlek add meg a lekérdezni kívánt csoport nevét!
-i_found = Megtaláltam a
+i_found = Megtaláltam a(z)
 the_group = csoportot
 whats_next = Mit szeretnél tenni az eredménnyel?
 whats_next_outconsole = Kiiratnád
@@ -172,3 +172,6 @@ mass_modify_user_attributes = Felhasználók tulajdonságainak tömeges módosí
 path_of_backup = A módosítások előtti állapot mentésének helye:
 path_of_failed_tasks = A sikertelen módosításokról készített logfájl helye: 
 unsuccesful = Sikertelen!
+number = Sorsz
+more_than_one_obj = A megadott azonosítórészlettel több objektum is létezik!
+choose_from_list = Kérlek add meg a kiválasztani kívánt objektum sorszámát
