--- a/Languages/eng.lang
+++ b/Languages/eng.lang
@@ -172,3 +172,6 @@ mass_modify_user_attributes = Mass modify user attributes
 path_of_backup = Path for the backup of the modified attributes:
 path_of_failed_tasks = Path for the info csv about the failed modification tries:
 unsuccesful = Unsuccesful!
+number = Numb
+more_than_one_obj = There are more than one object with the entered ID!
+choose_from_list = Please enter the number of the desired ID
